@@ -1,10 +1,14 @@
 package com.chat.websocket_hub.config;
 
+import com.chat.websocket_hub.event.downstream.UserSessionStatusEvent;
+import com.chat.websocket_hub.service.KafkaProducer;
 import com.chat.websocket_hub.service.WebsocketSessionService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.socket.CloseStatus;
 import org.springframework.web.reactive.socket.WebSocketHandler;
 import org.springframework.web.reactive.socket.WebSocketMessage;
 import org.springframework.web.reactive.socket.WebSocketSession;
@@ -12,37 +16,67 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.core.publisher.Sinks;
 
+import java.time.OffsetDateTime;
 import java.util.List;
 
 @Component
 @Slf4j
 @RequiredArgsConstructor
 public class WsMessageHandler implements WebSocketHandler {
-
+  private final KafkaProducer kafkaProducer;
   private final WebsocketSessionService websocketSessionService;
-  private final String USER_ID = "userId";
+  private final String USER_ID = "UserId";
 
-
-
+  @NotNull
   @Override
   public Mono<Void> handle(WebSocketSession session) {
     String sessionId = session.getId();
-    String userId = extractUserIdFromHeader(session);
-    // TODO: handle exception when user id is null, return 401 Unauthorized
-    log.info("New Session started: {}, userId: {}", sessionId, userId);
-    Sinks.Many<String> sink = websocketSessionService.addSession(sessionId);
 
-    // TODO: publish kafka message when session is started
-    Flux<String> flux = sink.asFlux();
+    // Extract userId and handle unauthorized access
+    return Mono.fromSupplier(() -> extractUserIdFromHeader(session))
+        .switchIfEmpty(
+            Mono.defer(
+                () -> {
+                  log.error("Unauthorized access attempt for session: {}", sessionId);
+                  return session.close(CloseStatus.POLICY_VIOLATION).then(Mono.empty());
+                }))
+        .flatMap(
+            userId -> {
+              log.info("New Session started: {}, userId: {}", sessionId, userId);
+              Sinks.Many<String> sink = websocketSessionService.addSession(sessionId);
 
-    DataBufferFactory bufferFactory = session.bufferFactory();
-    return session.send(flux.map(
-                    msg -> new WebSocketMessage(WebSocketMessage.Type.TEXT, bufferFactory.wrap(msg.getBytes()))
-            ))
-            .doFinally(signalType -> {
-              log.info("Session ended: {}", sessionId);
-              //TODO: publish kafka message when session is ended
-              websocketSessionService.removeSession(sessionId);
+              UserSessionStatusEvent sessionStartEvent =
+                  UserSessionStatusEvent.builder()
+                      .sessionId(sessionId)
+                      .userId(userId)
+                      .type("SESSION_START")
+                      .createdAt(OffsetDateTime.now())
+                      .build();
+              kafkaProducer.sendSessionEvent(sessionStartEvent);
+
+              Flux<String> flux = sink.asFlux();
+
+              DataBufferFactory bufferFactory = session.bufferFactory();
+              return session
+                  .send(
+                      flux.map(
+                          msg ->
+                              new WebSocketMessage(
+                                  WebSocketMessage.Type.TEXT, bufferFactory.wrap(msg.getBytes()))))
+                  .doFinally(
+                      signalType -> {
+                        log.info("Session ended: {}", sessionId);
+                        UserSessionStatusEvent sessionEndEvent =
+                            UserSessionStatusEvent.builder()
+                                .sessionId(sessionId)
+                                .userId(userId)
+                                .type("SESSION_END")
+                                .createdAt(OffsetDateTime.now())
+                                .build();
+                        kafkaProducer.sendSessionEvent(sessionEndEvent);
+
+                        websocketSessionService.removeSession(sessionId);
+                      });
             });
   }
 
@@ -58,10 +92,9 @@ public class WsMessageHandler implements WebSocketHandler {
 
   private String extractUserIdFromHeader(WebSocketSession session) {
     List<String> userIdHeader = session.getHandshakeInfo().getHeaders().get(USER_ID);
-    if (userIdHeader != null || userIdHeader.isEmpty()) {
+    if (userIdHeader == null || userIdHeader.isEmpty()) {
       return null;
     }
-    return userIdHeader.get(0);
+    return userIdHeader.getFirst();
   }
-
 }
